<resources>
    <string name="app_name">CFAS</string>
    <string name="main_title">ระบบการประเมินโรงอาหารและสถานที่ปรุงประกอบ</string>
    <string name="school">แบบประเมิน</string>
    <string name="hospital">โรงพยาบาล</string>
    <string name="all">ทั้งหมด</string>
    <string name="title_activity_school">CFAS</string>
    <string name="main_school">ข้อมูลเบื้องต้น</string>
    <string name="text1">ชื่อสถานที่</string>
    <string name="text2">ชื่อโรงอาหาร</string>
    <string name="text3">สังกัด</string>
    <string name="text4">ที่อยู่</string>
    <string name="text5">จำนวนผู้รับบริการ</string>
    <string name="text6">จำนวน นร/พง</string>
    <string name="text7">จำนวนผู้สัมผัสอาหาร</string>
    <string name="sup_text">คน</string>
    <string name="title_activity_hospital">CFAS</string>
    <string name="text8">ชื่อโรงพยาบาล</string>
    <string name="text14">จำนวนพนักงาน</string>
    <string name="text15">การอบรมด้านสุขาภิบาล</string>
    <string name="text16">เคย</string>
    <string name="text17">ไม่เคย</string>
    <string name="title_activity_school2">CFAS</string>
    <string name="service">ลักษณะการให้บริการ</string>
    <string name="ser1">หน่วยงานดำเนินการเองทั้งหมด</string>
    <string name="ser2">ให้บุคคลภายนอกเข้ามาจำหน่ายอาหาร</string>
    <string name="ser3">ทั้ง 1 และ 2 จำนวน</string>
    <string name="lunc">การจัดโครงการอาหารกลางวัน</string>
    <string name="title_activity_school3">CFAS</string>
    <string name="assess">แบบประเมิน</string>
    <string name="assess1">ก.สถานที่รับประทานอาหารและบริเวณทั่วไป</string>
    <string name="assess2">ผ่าน</string>
    <string name="assess3">ไม่ผ่าน</string>
    <string name="title_activity_school4">CFAS</string>
    <string name="title_activity_school5">CFAS</string>
    <string name="title_activity_school6">CFAS</string>
    <string name="title_activity_school7">CFAS</string>
    <string name="title_activity_school8">CFAS</string>
    <string name="title_activity_main2">CFAS</string>
    <string name="action_settings">หน้าหลัก</string>
    <string name="action_ass">แบบประเมิน</string>
    <string name="title_activity_recommend1">คำชี้แจง</string>
    <string name="recommend"><b>มาตราฐานสำหรับการประเมินโรงอาหารแบ่งออกเป็น 2 ระดับ </b>คือ 1. ดีมาก ต้องปฏิบัติให้ได้ครบทั้ง 30 ข้อ และ 2. ดี ต้องปฏิบัติให้ได้ครบทั้ง 20 ข้อที่มีสีส้ม </string>
    <string name="recommend1"><br>1. ดีมาก ต้องปฏิบัติให้ได้ครบทั้ง 30 ข้อ</br> </string>
    <string name="recommend2">2. ดี ต้องปฏิบัติให้ได้ครบทั้ง 20 ข้อที่มีสีส้ม</string>
    <string name="title_activity_school9">CFAS</string>
    <string name="title_activity_school10">CFAS</string>
    <string name="main2">แบบประเมินทั้งหมด</string>

</resources>
