<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_school1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.nook.assessment.activity.BasicInfoActivity">

    <TextView
        android:id="@+id/basicInfoMainLabel"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="#b3ddf9"
        android:gravity="center"
        android:orientation="vertical"
        android:text="@string/main_school"
        android:textColor="#000000"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/basicTrain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="10dp"
        android:background="#b3ddf9"
        android:orientation="vertical"
        android:text="@string/text15"
        android:textColor="#000000"
        android:textSize="18sp" />

    <RadioGroup
        android:id="@+id/basicTrainRadioGroup"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/basicTrainRadioTrue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:checked="true"
            android:text="เคย"
            android:textColor="#000000"
            android:textSize="18sp" />

        <RadioButton
            android:id="@+id/basicTrainRadioFalse"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="60dp"
            android:text="ไม่เคย"
            android:textSize="18sp" />
    </RadioGroup>

    <TextView
        android:id="@+id/basicServiceType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="15dp"
        android:background="#b3ddf9"
        android:text="@string/service"
        android:textColor="#000000"
        android:textSize="18sp" />

    <RadioGroup
        android:id="@+id/basicServiceTypeRadioGroup"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp">

        <RadioButton
            android:id="@+id/basicServiceTypeRadioInsider"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="6dp"
            android:checked="true"
            android:text="@string/ser1"
            android:textColor="#000000"
            android:textSize="18sp" />

        <RadioButton
            android:id="@+id/basicServiceTypeRadioOutsider"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="8dp"
            android:text="@string/ser2"
            android:textColor="#000000"
            android:textSize="18sp" />

        <RadioButton
            android:id="@+id/basicServiceTypeRadioBoth"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="8dp"
            android:text="@string/ser3"
            android:textColor="#000000"
            android:textSize="18sp" />
    </RadioGroup>

    <TextView
        android:id="@+id/basicLunchOrganize"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/activityHospitalNextBtn"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="12dp"
        android:background="#b3ddf9"
        android:text="@string/lunc"
        android:textColor="#000000"
        android:textSize="18sp" />

    <RadioGroup
        android:id="@+id/basicLunchOrganizeRadioGroup"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/basicLunchOrganizeTrue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:checked="true"
            android:text="@string/text16"
            android:textSize="18sp" />

        <RadioButton
            android:id="@+id/basicLunchOrganizeFalse"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="60dp"
            android:text="ไม่เคย"
            android:textColor="#000000"
            android:textSize="18sp" />
    </RadioGroup>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/school01NextBtn"
            android:layout_width="50sp"
            android:layout_height="40sp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="31dp"
            android:layout_marginLeft="280sp"
            android:background="@android:drawable/title_bar"
            android:onClick="onClickNextFromSchool1"
            android:text="ต่อไป" />

        <Button
            android:id="@+id/school01BackBtn"
            android:layout_width="50dp"
            android:layout_height="40dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentStart="true"
            android:layout_marginStart="32dp"
            android:background="?android:attr/actionModeCloseDrawable"
            android:onClick="onClickBackFromSchool1" />
    </RelativeLayout>
</LinearLayout>
