<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/watch_view_stub"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.nook.assessment.activity.MainActivity"
    tools:deviceIds="wear">

    <TextView
        android:id="@+id/activityMainHeaderLabel"
        android:layout_width="409dp"
        android:layout_height="76dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:background="#b3ddf9"
        android:gravity="center"
        android:orientation="vertical"
        android:text="@string/main_title"
        android:textColor="#000000"
        android:textSize="19sp" />

    <ImageView
        android:id="@+id/activityMainFooterImg"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:src="@drawable/foot" />

    <ImageButton
        android:id="@+id/activityMainAssessmentImg"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_alignTop="@+id/activityMainAllImg"
        android:layout_marginEnd="33dp"
        android:layout_toStartOf="@+id/activityMainAllImg"
        android:background="@android:drawable/presence_away"
        android:onClick="onClickNext"
        android:src="@mipmap/school" />

    <TextView
        android:id="@+id/activityMainAllLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/activityMainAllImg"
        android:layout_centerHorizontal="true"
        android:text="@string/all"
        android:textColor="#000000" />

    <ImageButton
        android:id="@+id/activityMainDescriptionImg"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_alignTop="@+id/activityMainAllImg"
        android:layout_marginStart="33dp"
        android:layout_toEndOf="@+id/activityMainAllImg"
        android:background="?android:attr/colorPressedHighlight"
        android:onClick="onClickNext3"
        app:srcCompat="@android:drawable/ic_dialog_alert" />

    <TextView
        android:id="@+id/activityMainDescriptionLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/activityMainDescriptionImg"
        android:layout_below="@+id/activityMainAllImg"
        android:text="คำชี้แจง"
        android:textColor="#000000" />

    <ImageButton
        android:id="@+id/activityMainAllImg"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_alignBottom="@+id/activityMainMainImg"
        android:layout_centerHorizontal="true"
        android:background="@android:drawable/presence_busy"
        android:onClick="onClickAll"
        android:src="@mipmap/all" />

    <ImageView
        android:id="@+id/activityMainMainImg"
        android:layout_width="wrap_content"
        android:layout_height="300sp"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/activityMainHeaderLabel"
        android:layout_marginTop="12dp"
        android:src="@drawable/cover" />

    <TextView
        android:id="@+id/activityMainAssessmentLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/activityMainAssessmentImg"
        android:layout_below="@+id/activityMainAssessmentImg"
        android:layout_marginStart="11dp"
        android:text="@string/school"
        android:textColor="#000000" />


</RelativeLayout>
