<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/watch_view_stub"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.nook.assessment.activity.ActivityAPage1"
    tools:deviceIds="wear">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/activity02AssessmentTitle"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="#b3ddf9"
            android:gravity="center"
            android:text="@string/assess"
            android:textColor="#000000"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/activity02Area"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center"
            android:layout_marginTop="9dp"
            android:background="@color/colorBack"
            android:text="@string/assess1"
            android:textColor="#000000"
            android:textSize="18sp" />

        <ImageView
            android:id="@+id/activity02AreaImg"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_alignTop="@+id/activityHospitalHospitalNameLabel"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center"
            android:layout_marginTop="12dp"
            android:src="@mipmap/cn2" />

        <TextView
            android:id="@+id/activity02Clean"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:background="@color/cb"
            android:text="1.สะอาด เป็นระเบียบ"
            android:textColor="#000000"
            android:textSize="18sp" />

        <RadioGroup
            android:id="@+id/activity02CleanRadioGroup"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/activity02CleanRadioTrue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:checked="true"
                android:text="@string/assess2"
                android:textColor="#000000"
                android:textSize="18sp" />

            <RadioButton
                android:id="@+id/activity02CleanRadioFalse"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"
                android:text="@string/assess3"
                android:textColor="#000000"
                android:textSize="18sp" />


        </RadioGroup>

        <EditText
            android:id="@+id/activity02CleanComment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:background="@android:drawable/editbox_dropdown_light_frame"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/activity02Table"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:background="@color/cb"
            android:text="2.โต๊ะ เก้าอี้แข็งแรง จัดเป็นระเบียบ"
            android:textColor="#000000"
            android:textSize="18sp" />

        <RadioGroup
            android:id="@+id/activity02TableRadioGroup"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/activity02TableRadioTrue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:checked="true"
                android:text="@string/assess2"
                android:textColor="#000000"
                android:textSize="18sp" />

            <RadioButton
                android:id="@+id/activity02TableRadioFalse"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"
                android:text="@string/assess3"
                android:textColor="#000000"
                android:textSize="18sp" />
        </RadioGroup>

        <EditText
            android:id="@+id/activity02TableComment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:background="@android:drawable/editbox_dropdown_light_frame"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/activity02AirFlow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:background="@color/cb1"
            android:text="3.มีการระบายอากาศดี"
            android:textColor="#000000"
            android:textSize="18sp" />

        <RadioGroup
            android:id="@+id/activity02AirFlowRadioGroup"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/activity02AirFlowRadioTrue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:checked="true"
                android:text="@string/assess2"
                android:textColor="#000000"
                android:textSize="18sp" />

            <RadioButton
                android:id="@+id/activity02AirFlowRadioFalse"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"
                android:text="@string/assess3"
                android:textColor="#000000"
                android:textSize="18sp" />

        </RadioGroup>

        <EditText
            android:id="@+id/activity02AirFlowComment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:background="@android:drawable/editbox_dropdown_light_frame"
            android:textSize="18sp" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp">

            <Button
                android:id="@+id/activity02BackBtn"
                android:layout_width="50dp"
                android:layout_height="40dp"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="10dp"
                android:background="?android:attr/actionModeCloseDrawable"
                android:onClick="onClickBack" />

            <Button
                android:id="@+id/activity02NextBtn"
                android:layout_width="50sp"
                android:layout_height="40sp"
                android:layout_alignParentEnd="true"
                android:layout_alignParentTop="true"
                android:layout_marginEnd="28dp"
                android:background="@android:drawable/title_bar"
                android:onClick="onClickNext"
                android:text="ต่อไป" />
        </RelativeLayout>
    </LinearLayout>
</ScrollView>
